Terraform/k8s-manifests/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
spec:
  controller: alb.ingress.k8s.aws/ingress-controller
