Terraform/k8s-manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
      annotations:
        argocd-image-updater.argoproj.io/backend-container.image-name: ghcr.io/yuram8/teachua-back
        argocd-image-updater.argoproj.io/backend-container.update-strategy: latest
    spec:
      containers:
      - name: backend
        image: ghcr.io/yuram8/teachua-back:latest
        ports:
        - containerPort: 8080
